--- a/Woong_Android/app/src/main/res/layout/fragment_sellermarket_review.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_sellermarket_review.xml
@@ -2,5 +2,267 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <ImageView
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@color/colorPrimaryDark"/>
+        <TextView
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="만족해요!"
+            android:textColor="@color/colorPrimaryDark"/>
+        <RatingBar
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:isIndicator="true"
+            android:numStars="5"
+            android:rating="4"
+            style="?android:attr/ratingBarStyleIndicator"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:orientation="vertical">
 
+            </LinearLayout>
+
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginVertical="10dp"
+            android:background="@android:color/darker_gray"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_marginLeft="10dp">
+                <TextView
+                    android:paddingVertical="9dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="배달 속도"/>
+                <TextView
+                    android:paddingVertical="9dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="맛"/>
+                <TextView
+                    android:paddingVertical="9dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="유통 기한"/>
+                <TextView
+                    android:paddingVertical="9dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="친절도"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:orientation="vertical">
+                <RatingBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:isIndicator="true"
+                    android:numStars="5"
+                    android:rating="4"
+                    style="?android:attr/ratingBarStyleIndicator"
+                    />
+                <RatingBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:isIndicator="true"
+                    android:numStars="5"
+                    android:rating="4"
+                    style="?android:attr/ratingBarStyleIndicator"
+                    />
+                <RatingBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:isIndicator="true"
+                    android:numStars="5"
+                    android:rating="4"
+                    style="?android:attr/ratingBarStyleIndicator"
+                    />
+                <RatingBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:isIndicator="true"
+                    android:numStars="5"
+                    android:rating="4"
+                    style="?android:attr/ratingBarStyleIndicator"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginVertical="10dp"
+            android:background="@android:color/darker_gray"
+            />
+        <TextView
+            android:layout_marginLeft="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="포토"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal">
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="50dp"
+                android:background="@android:color/darker_gray"
+                android:layout_margin="1dp"/>
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="50dp"
+                android:background="@android:color/darker_gray"
+                android:layout_margin="1dp"/>
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="50dp"
+                android:background="@android:color/darker_gray"
+                android:layout_margin="1dp"/>
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="50dp"
+                android:background="@android:color/darker_gray"
+                android:layout_margin="1dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal">
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="50dp"
+                android:background="@android:color/darker_gray"
+                android:layout_margin="1dp"/>
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="50dp"
+                android:background="@android:color/darker_gray"
+                android:layout_margin="1dp"/>
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="50dp"
+                android:background="@android:color/darker_gray"
+                android:layout_margin="1dp"/>
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="50dp"
+                android:background="@android:color/darker_gray"
+                android:layout_margin="1dp"/>
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginVertical="10dp"
+            android:background="@android:color/darker_gray"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="후기보기"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="10dp">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="최윤정"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="7"
+                android:layout_marginLeft="10dp"
+                android:text="맛있당마시삳아아아아아앙ㅇ아아ㅏㅇ"/>
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:background="@color/colorPrimaryDark"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="10dp">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="최윤정"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="7"
+                android:layout_marginLeft="10dp"
+                android:text="맛있당마시삳아아아아아앙ㅇ아아ㅏㅇ"/>
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:background="@color/colorPrimaryDark"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="10dp">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="최윤정"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="7"
+                android:layout_marginLeft="15dp"
+                android:text="맛있당마시삳아아아아아앙ㅇ아아ㅏㅇ"/>
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:background="@color/colorPrimaryDark"/>
+        </LinearLayout>
+        <Button
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="34dp"
+            android:layout_width="295dp"
+            android:layout_height="30dp"
+            android:background="@drawable/green_round_button"
+            android:text="더보기"
+            android:textColor="#FFFFFF"
+            android:layout_gravity="center_horizontal"
+            />
+    </LinearLayout>
 </ScrollView>
