--- a/Woong_Android/app/src/main/res/layout/fragment_sellermarket_review.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_sellermarket_review.xml
@@ -1,5 +1,6 @@
-<ScrollView
+<android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
@@ -130,7 +131,7 @@
             android:text="포토"/>
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center_horizontal">
             <ImageView
@@ -156,7 +157,7 @@
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center_horizontal">
             <ImageView
@@ -265,4 +266,4 @@
             android:layout_gravity="center_horizontal"
             />
     </LinearLayout>
-</ScrollView>
+</android.support.v4.widget.NestedScrollView>
