--- a/Woong_Android/app/src/main/res/layout/fragment_home_main.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_home_main.xml
@@ -5,55 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff">
-<<<<<<< HEAD
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="100dp"
         android:orientation="vertical"
         android:background="#FFFFFF">
-        <RelativeLayout
-=======
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#ddeeff">
-        <TextView
-            android:id="@+id/tv_location_main"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:text="강북구 미아동"/>
-        <ImageButton
-            android:id="@+id/ib_location_main"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/tv_location_main"
-            android:background="@color/colorAccent"/>
-        <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@color/colorAccent"
-            android:layout_marginRight="10dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"/>
-    </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:background="#ffeeff">
-        <ImageView
-            android:id="@+id/iv_searchback_main"
->>>>>>> 123caef306f8fa4b7b06544985d260756e2d74ec
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#FFFFFF">
+        android:background="#ffffff">
             <TextView
                 android:id="@+id/tv_location_main"
                 android:layout_width="wrap_content"
