--- a/Woong_Android/app/src/main/res/layout/item_product_home.xml
+++ b/Woong_Android/app/src/main/res/layout/item_product_home.xml
@@ -11,13 +11,16 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="120dp">
+
         <ImageView
-            android:id="@+id/iv_bmproductimg_myproduct"
-            android:background="#acacac"
+            android:id="@+id/iv_productimg_home"
             android:layout_width="match_parent"
-            android:layout_height="120dp" />
+            android:layout_height="120dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="#acacac" />
         <ImageView
-            android:id="@+id/btn_bookmark_myproduct"
+            android:id="@+id/btn_favorite_home"
             android:layout_alignParentBottom="true"
             android:layout_width="20dp"
             android:layout_height="20dp"
@@ -36,7 +39,7 @@
             android:text="["/>
         <TextView
             android:layout_toRightOf="@+id/sign"
-            android:id="@+id/marketname_bookmark_myproduct"
+            android:id="@+id/marketname_bookmark_home"
             android:gravity="center"
             android:layout_weight="1"
             android:layout_width="wrap_content"
@@ -45,7 +48,7 @@
 
 
         <TextView
-            android:layout_toRightOf="@+id/marketname_bookmark_myproduct"
+            android:layout_toRightOf="@+id/marketname_bookmark_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="]"/>
@@ -53,7 +56,7 @@
 
 
     <TextView
-        android:id="@+id/productname_bookmark_myproduct"
+        android:id="@+id/productname_bookmark_home"
         android:gravity="center"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
@@ -66,31 +69,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/unitnum_bookmark_myproduct"
+            android:id="@+id/unitnum_bookmark_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1"/>
         <TextView
-            android:layout_toRightOf="@+id/unitnum_bookmark_myproduct"
-            android:id="@+id/unitname_bookmark_myproduct"
+            android:layout_toRightOf="@+id/unitnum_bookmark_home"
+            android:id="@+id/unitname_bookmark_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="kg"/>
         <TextView
-            android:layout_toRightOf="@+id/unitname_bookmark_myproduct"
-            android:id="@+id/dang_bookmark_myproduct"
+            android:layout_toRightOf="@+id/unitname_bookmark_home"
+            android:id="@+id/dang_bookmark_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="당"/>
         <TextView
-            android:id="@+id/cost_bookmark_myproduct"
+            android:id="@+id/cost_bookmark_home"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/dang_bookmark_myproduct"
+            android:layout_toRightOf="@+id/dang_bookmark_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="6600"/>
         <TextView
-            android:layout_toRightOf="@+id/cost_bookmark_myproduct"
+            android:layout_toRightOf="@+id/cost_bookmark_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="원"/>
@@ -102,7 +105,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp">
         <TextView
-            android:id="@+id/firsttag_bookmark_myproduct"
+            android:id="@+id/firsttag_bookmark_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="#당일배송"
@@ -110,8 +113,8 @@
             android:textColor="#ffffff"/>
         <TextView
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/firsttag_bookmark_myproduct"
-            android:id="@+id/secondtag_bookmark_myproduct"
+            android:layout_toRightOf="@+id/firsttag_bookmark_home"
+            android:id="@+id/secondtag_bookmark_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="#당일배송"
