--- a/Woong_Android/app/src/main/res/layout/fragment_product_home.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_product_home.xml
@@ -6,9 +6,8 @@
     android:orientation="vertical"
     android:background="#FFFFFF">
     <RelativeLayout
-
         android:layout_width="match_parent"
-        android:layout_height="38dp"
+        android:layout_height="50dp"
         android:background="@color/colorPrimaryDark">
         <TextView
             android:id="@+id/tv_submenu_product"
@@ -20,36 +19,40 @@
             android:text="감자"
             android:fontFamily="@font/nanum_extrabold"
             android:textSize="17sp"/>
+
         <ImageButton
             android:id="@+id/btn_search_product"
-            android:layout_width="30dp"
+            android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:background="@null"
+            android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
             android:layout_toLeftOf="@+id/btn_cart_product"
-            android:layout_centerVertical="true"/>
+            android:src="@drawable/home_select_category_search"
+            android:background="@null" />
         <ImageView
             android:id="@+id/iv_searchwide_product"
             android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/home_select_category_search"
+            android:layout_height="35dp"
+            android:src="@drawable/white_round_rec"
             android:layout_marginRight="10dp"
+            android:visibility="invisible"
             android:layout_toLeftOf="@id/btn_cart_product"
             android:layout_centerVertical="true"/>
 
         <ImageView
             android:id="@+id/iv_searchico_product"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginLeft="4dp"
+            android:layout_width="23dp"
+            android:layout_height="23dp"
+            android:layout_marginLeft="10dp"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/iv_searchwide_product"
-            android:src="@drawable/home_select_category_basket" />
+            android:visibility="invisible"
+            android:layout_alignStart="@+id/iv_searchwide_product"
+            android:src="@drawable/home_search_icon" />
         <ImageButton
             android:id="@+id/btn_cart_product"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@null"
+            android:background="@drawable/home_select_category_basket"
             android:layout_marginRight="10dp"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"/>
@@ -62,6 +65,7 @@
             android:textSize="16sp"
             android:fontFamily="@font/nanum_regular"
             android:text="취소"
+            android:gravity="center"
             android:visibility="gone"
             android:layout_marginRight="13dp"
             android:layout_centerVertical="true"
@@ -76,7 +80,7 @@
             android:textAlignment="center"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
-            android:background="@drawable/gray_round_button"
+            android:background="#00000000"
             android:textColor="#000000"
             android:maxLines="1"
             android:textSize="16sp"
