--- a/Woong_Android/app/src/main/res/layout/activity_review_write.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_review_write.xml
@@ -102,8 +102,8 @@
                                 android:id="@+id/productname_alarm"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_alignParentBottom="true"
-                                android:layout_marginTop="5dp"
+                                android:layout_alignParentStart="true"
+                                android:layout_alignParentTop="true"
                                 android:fontFamily="@font/nanumsquare_bold"
                                 android:text="웅이네 포슬포슬 왕감자 3kg"
                                 android:textColor="#1C2320"
